--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       background-color: #0f0f1b;
     }
 
-    /* 🔮 Profile image pulse glow */
+    /* Profile image pulse glow */
     .pulse-ring::before {
       content: "";
       position: absolute;
@@ -62,7 +62,7 @@
       50% { border-color: #a855f7; }
     }
 
-    /* ✨ Glowing BORDER ONLY */
+    /*  Glowing BORDER ONLY */
     .glow-border {
       border: 2px solid transparent;
       border-radius: 1rem;
@@ -100,7 +100,7 @@
     <div class="mt-6 bg-[#1f2937] p-4 rounded-xl text-sm text-gray-300">
       <h2 class="text-purple-400 font-semibold mb-1">ABOUT</h2>
       <p>
-        Hi, I'm Shaik Rahil, a final-year B.Tech CSE student specializing in Artificial Intelligence & Machine Learning. I'm an aspiring web developer passionate about creating meaningful digital experiences, driven by curiosity, consistency, and real-world impact.
+        👋Hi, I'm Shaik Rahil, a final-year B.Tech CSE student specializing in Artificial Intelligence & Machine Learning. I'm an aspiring web developer passionate about creating meaningful digital experiences, driven by curiosity, consistency, and real-world impact.
       </p>
     </div>
 
