--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="mt-6 bg-[#1f2937] p-4 rounded-xl text-sm text-gray-300">
       <h2 class="text-purple-400 font-semibold mb-1">ABOUT</h2>
       <p>
-        👋Hi, I'm Shaik Rahil, a final-year B.Tech CSE student specializing in Artificial Intelligence & Machine Learning. I'm an aspiring web developer passionate about creating meaningful digital experiences, driven by curiosity, consistency, and real-world impact.
+        👋Hi, I'm Shaik Rahil, a final-year B.Tech specializing in Artificial Intelligence & Machine Learning Engineering. I'm an aspiring web developer passionate about creating meaningful digital experiences, driven by curiosity, consistency, and real-world impact.
       </p>
     </div>
 
@@ -108,13 +108,13 @@
     <div class="mt-6 text-center">
       <h3 class="text-purple-400 font-semibold mb-2">CONNECT</h3>
       <div class="flex justify-center gap-5">
-        <a href="https://www.instagram.com/" target="_blank" class="hover:scale-110 transition transform">
+        <a href="https://www.instagram.com/_shaik_rahil7_/" target="_blank" class="hover:scale-110 transition transform">
           <img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram" />
         </a>
-        <a href="https://www.linkedin.com/in/shaikrahil/" target="_blank" class="hover:scale-110 transition transform">
+        <a href="https://www.linkedin.com/in/shaik-rahil-99533533b/" target="_blank" class="hover:scale-110 transition transform">
           <img src="https://img.icons8.com/ios-glyphs/30/ffffff/linkedin.png" alt="LinkedIn" />
         </a>
-        <a href="https://github.com/shaikrahil732" target="_blank" class="hover:scale-110 transition transform">
+        <a href="https://github.com/shaikRahilAhmed" target="_blank" class="hover:scale-110 transition transform">
           <img src="https://img.icons8.com/ios-glyphs/30/ffffff/github.png" alt="GitHub" />
         </a>
       </div>
