--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="mt-6 bg-[#1f2937] p-4 rounded-xl text-sm text-gray-300">
       <h2 class="text-purple-400 font-semibold mb-1">ABOUT</h2>
       <p>
-        👋Hi, I'm Shaik Rahil, a final-year B.Tech specializing in Artificial Intelligence & Machine Learning Engineering. I'm an aspiring web developer passionate about creating meaningful digital experiences, driven by curiosity, consistency, and real-world impact.
+        👋Hi, I'm Shaik Rahil, a final-year B.Tech student specializing in Artificial Intelligence & Machine Learning Engineering. I'm an aspiring web developer passionate about creating meaningful digital experiences, driven by curiosity, consistency, and real-world impact.
       </p>
     </div>
 
